--- a/views/login form.ejs
+++ b/views/login form.ejs
@@ -13,15 +13,15 @@
     <button type="button" class="toggle-btn" onclick="Register()">Register</button>
   </div>
   <form id="LogIn"class="input-group"method="post">
-    <input type="text" class="input-feild" placeholder="user Id" required>
+    <input type="text" class="input-feild" placeholder="username" required>
     <input type="text" class="input-feild" placeholder="Enter Password" required>
     <input type="checkbox" class="check-box" ><span>Remeber Password</span>
     <button type="submit" class="submit-btn">LogIn</button>
   </form>
 
   <form id="Register"class="input-group" method="post">
-    <input type="text" class="input-feild" placeholder="user Id" required>
-    <input type="email" class="input-feild" placeholder="Email id" required>
+    <input type="text" class="input-feild" placeholder="username" required>
+    <input type="email" class="input-feild" placeholder="Email" required>
     <input type="text" class="input-feild" placeholder="Enter Password" required>
     <input type="text" class="input-feild" placeholder="Confirm Password" required>
     <input type="checkbox" class="check-box" ><span>agree to terms and conditions</span>
