--- a/views/login form.ejs
+++ b/views/login form.ejs
@@ -12,20 +12,20 @@
     <button type="button" class="toggle-btn" onclick="Login()">LogIn</button>
     <button type="button" class="toggle-btn" onclick="Register()">Register</button>
   </div>
-  <form id="LogIn"class="input-group"method="post">
-    <input type="text" class="input-feild" placeholder="username" required>
-    <input type="text" class="input-feild" placeholder="Enter Password" required>
+  <form id="LogIn" class="input-group" method="post">
+    <input type="text" class="input-feild" name="username" placeholder="username" required>
+    <input type="password" class="input-feild" name="Password" placeholder="Enter Password" required>
     <input type="checkbox" class="check-box" ><span>Remeber Password</span>
     <button type="submit" class="submit-btn">LogIn</button>
   </form>
 
   <form id="Register"class="input-group" method="post">
-    <input type="text" class="input-feild" placeholder="username" required>
-    <input type="email" class="input-feild" placeholder="Email" required>
-    <input type="text" class="input-feild" placeholder="Enter Password" required>
-    <input type="text" class="input-feild" placeholder="Confirm Password" required>
+    <input type="text" class="input-feild" name ="username" placeholder="username" name='username' required>
+    <input type="email" class="input-feild" name ="Email" placeholder="Email" required>
+    <input type="password" class="input-feild" name ="Password" placeholder="Password" required>
+    <input type="password" class="input-feild" name ="Confirmpassword" placeholder="Confirmpassword" required>
     <input type="checkbox" class="check-box" ><span>agree to terms and conditions</span>
-    <button type="submit" class="submit-btn">Register</button>
+    <button type="submit" class="submit-btn" method="post">Register</button>
   </form>
 </div>
 <script>
