--- a/public/map.css
+++ b/public/map.css
@@ -1,83 +1,44 @@
-*{
-  text-align: left;
-  position: relative;
-  font-family: "Sofia", sans-serif;
-  color: white ;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  
- 
-  
-  
-   
-}
+
 .header {
-  background-color:rgb(228, 243, 16);
+  overflow: hidden;
+  background-color:  #13f332;
+  padding: 10px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
   text-align: center;
-  padding: 20px;
-  width:100%;
-  height: 100px;
-  left:0px;
-  top:0px;
-  margin:0px;
-  position: relative;
-
-}
-
-
-nav{
-  display:flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo{
-  width: 150px;
-  height:80px;
-  padding-bottom: 20px;
-}
-
-
-.nav-links{
-  padding: 28px 0;
-}    
-
-.nav-links li{
-  display: inline-block;
-  margin: 0 15px;
-}
-
-.nav-links li a{
+  padding: 12px;
   text-decoration: none;
-  color: blue;
-  padding:  5px 0;
-  position: relative;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
 }
 
-.nav-links li a::after{
-  content: '';
-  background: #ff3d00;
-  width: 0%;
-  height: 2px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transition: width 0.5s;
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-.nav-links li a:hover::after{
-  width: 100%;
-
-
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
 }
-.btn{
-  background:#fcfaf9;
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
   
-  padding: 10px 30px;
-  border-radius: 3px;
-  cursor: pointer;
+  .header-right {
+    float: none;
+  }
 }
-
-
-  
