--- a/views/frontend.ejs
+++ b/views/frontend.ejs
@@ -1,35 +1,48 @@
 <html>
     <head>
         <title>Evopedia</title>
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel ="stylesheet" href="../public/map.css">
         </head>
         <body>
-            <div class="header">
-               
-                <nav>
-                    
-                    <img src="../public/logo.png "class="logo"><h1>Evopedia</h1>
-                  
-                    
-            
-            <ul class="nav-links">
-                <li><a href="/aboutus">About Us</a></li>
-                <li><a href="">Filter</a></li>
-                <li><a href="">My Vehical</a></li>
-                <li class="btn"><a href="/LogIn">
-                Sign In</a></li>
-            </ul>
-        </nav>
-        </div>
-        
-        <section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8786393.918907223!2d73.
-            46664445728308!3d16.66879057996544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!
-            2sin!4v1672373680211!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" 
-            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="header">
+            <img src="../public/logo.png" width="50" height="50" class="logo">
+            <div class="header-right">
+              
+             
+              <a href="/aboutus">About Us</a>
+               <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Filter</a>
+
+               <ul class="dropdown-menu">
+                <li><a class="dropdown-item" type="checkbox-dropdown"  href="#">CCS2<img src="../public/ccs2.png" width="50" height="50"><input type="checkbox" height="25" width="25"> </a></li>
+                <li><a class="dropdown-item" type="checkbox-dropdown" href="#">Type 2<img src="../public/type2.png" width="50" height="50"> <input type="checkbox" height="25" width="25"></a></li>
+          </ul>
+        </li>
+        <% if(user){ %>
+          <a><%= user%></a>
+          <a href="/auth/logout">LogOut</a>
+        <% } else{ %>  
+          <a href="/auth/login">LogIn</a>
+          <a href="/auth/register">Register</a>
+       <% } %>
+              
+            </div>
+          </div>
+           
+          <div id="map"></div>
+<section>
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPf6GZdShufw5fwc8yH-GErlgsgwcE_i4&callback=initMap&v=weekly" 
+  defer 
+></script>
         </section>
             </div>
-           
+            <script src ="/navigation.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         </body>
     
 </html>
+      
+     
+     
