--- a/public/map.css
+++ b/public/map.css
@@ -37,8 +37,128 @@
     display: block;
     text-align: left;
   }
+
   
   .header-right {
     float: none;
   }
 }
+  
+  ul {
+    position: absolute;
+    top: 200px;
+    left: 50px;
+    z-index: 100;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  li a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+  }
+  
+  
+  .topnav {
+    position: absolute;
+    top: 200px;
+    left: 50px;
+    z-index: 100;
+    width: auto;
+    height:auto;
+    background-color: #f4f2fa;
+    position: absolute;
+  }
+  
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  .topnav a {
+    color: rgb(0, 0, 0);
+    padding: 16px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+    height: 55px;
+    
+  }
+  
+  
+  .topnav a.icon {
+    background: rgb(247, 238, 238);
+    display: block;
+    position: absolute;
+    height: 55px;
+    right: 0;
+    top: 0;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
+.navigation {
+     background-color: #13f332; 
+    position: absolute;
+    top: 300px;
+    left: 250px;
+    z-index: 100;
+   
+   padding: 10px;
+    
+  }
+
+  .navigation form {
+    display: inline;
+    justify-content: center;
+  }
+
+  .navigation input[type="text"] {
+    padding: 8px;
+    border-radius: 4px;
+    border: black;
+    margin-right: 10px;
+    width: 500px;
+  }
+  
+  .navigation button[type="button"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .navigation button[type="button"]:hover {
+    background-color: #3e8e41;
+  }
+
+  .close{
+    position: absolute;
+    top: -25px;
+    left: 45px;
+    z-index: 100;
+  }
