--- a/views/frontend.ejs
+++ b/views/frontend.ejs
@@ -1,15 +1,34 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Evopedia</title>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        
         <link rel ="stylesheet" href="../public/map.css">
+        <script src="https://kit.fontawesome.com/725c93e947.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <head>
+          <style type="text/css">
+        
+            /* Set the size of the div element
+            that contains the map */
+            #map {
+              position: absolute;
+              top: 70px;
+              left: 0;
+              bottom: 0;
+              right: 0;
+            }
+            
+           
+          </style>
+        </head>
         </head>
         <body>
           <div class="header">
             <img src="../public/logo.png" width="50" height="50" class="logo">
             <div class="header-right">
-              
              
               <a href="/aboutus">About Us</a>
                <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Filter</a>
@@ -20,7 +39,7 @@
           </ul>
         </li>
         <% if(user){ %>
-          <a><%= user%></a>
+          <button class = dropdown> <a><%= user%></a></button>
           <a href="/auth/logout">LogOut</a>
         <% } else{ %>  
           <a href="/auth/login">LogIn</a>
@@ -29,17 +48,89 @@
               
             </div>
           </div>
+
+          
+         	<!--The div element for the map -->
+           <script src="../public/navigation.js"></script>
+          
+          
            
-          <div id="map"></div>
-<section>
-  <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPf6GZdShufw5fwc8yH-GErlgsgwcE_i4&callback=initMap&v=weekly" 
-  defer 
-></script>
-        </section>
-            </div>
-            <script src ="/navigation.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+	<div id="map"></div>
+ 
+	<!--Add a script by google -->
+<script src=
+"https://maps.googleapis.com/maps/api/js?key=AIzaSyCPf6GZdShufw5fwc8yH-GErlgsgwcE_i4&callback=initMap"
+		async>
+
+
+
+
+    
+   
+   
+	</script>	
+
+
+<div class="topnav">
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa-solid fa-bars"></i>
+    <a></a>
+    
+  <div id="myLinks">
+ 
+    <a href="#" ><img src="../public/legend.jpg" width="30" height="30">&nbsp&nbspLegend</a>
+    <a class="openDirection" href="#"><img src="../public/navigation.png" width="30" height="30">&nbsp&nbspNavigation </a>
+    <a href="#"><img src="../public/add-point.png" width="30" height="30" onclick="placeMarkerAndPanTo(latLng, map)">&nbsp&nbspAdd Station </a>
+    <a href="#"><img src="../public/feedback.png" width="30" height="30">&nbsp&nbspFeedback</a>
+  </div>
+
+  </a>
+</div>
+
+<script>
+$(".openDirection").on('click', function(){
+    $(".navigation").removeClass("d-none");
+    //(... rest of your JS code)
+});
+$(".close").on('click', function(){
+  alert("ksjhfkj")
+    // $(".navigation").addClass("d-none");
+    //(... rest of your JS code)
+});
+  function myFunction() {
+    var x = document.getElementById("myLinks");
+    if (x.style.display === "block") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "block";
+    }
+  }
+  </script>
+
+<div class = "navigation d-none">
+  <!-- <button class="close">Close</button>
+   -->
+   
+  
+   <div>
+    <a class="close" href="">Close</a>
+    </div>
+
+   
+   
+  
+	<form>
+  <h4><label for="origin" >Origin:</label></h4>
+  <input type="text" id="origin" name="origin"placeholder="Enter current/Starting location"><br>
+
+  <h4><label for="destination">Destination:</label></h4>
+  <input type="text" id="destination" name="destination" placeholder="Enter Destinationlocation"><br>
+
+ <center> <input type="button" value="Get Directions" onclick="initMap()"></center>
+</form>
+</div>
+
+	          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         </body>
     
 </html>
