--- a/public/map.css
+++ b/public/map.css
@@ -121,8 +121,8 @@
 .navigation {
      background-color: #13f332; 
     position: absolute;
-    top: 300px;
-    left: 250px;
+    top: 200px;
+    right: 50px;
     z-index: 100;
    
    padding: 10px;
@@ -139,7 +139,8 @@
     border-radius: 4px;
     border: black;
     margin-right: 10px;
-    width: 500px;
+    width: 300px;
+    height: 50px;
   }
   
   .navigation button[type="button"] {
@@ -162,3 +163,41 @@
     left: 45px;
     z-index: 100;
   }
+
+  .station {
+    background-color: #13f332; 
+   position: absolute;
+   top: 80px;
+   left: 950px;
+   z-index: 100;
+  
+  padding: 10px;
+   
+ }
+
+ .station form {
+   display: inline;
+   justify-content: center;
+ }
+
+ .station input[type="text"] {
+   padding: 8px;
+   border-radius: 4px;
+   border: black;
+   margin-right: 10px;
+   width: 300px;
+ }
+ 
+ .station button[type="button"] {
+   background-color: #4CAF50;
+   color: white;
+   padding: 8px 16px;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+   transition: background-color 0.3s;
+ }
+ 
+ .station button[type="button"]:hover {
+   background-color: #3e8e41;
+ }
