--- a/views/frontend.ejs
+++ b/views/frontend.ejs
@@ -28,9 +28,19 @@
         <body>
           <div class="header">
             <img src="../public/logo.png" width="50" height="50" class="logo">
+            <img src="../public/Evopedia White.png" width="150" height="30" class="logo">
             <div class="header-right">
              
               <a href="/aboutus">About Us</a>
+              <% if(admin=="admin"){ %>
+              <a href="/admin/feedback">FeedBack List</a>
+              <%}
+              %>
+
+              <% if(admin=="admin"){ %>
+                <a href="/admin/users">Users Data</a>
+                <%}
+                %>
                <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Filter</a>
 
                <ul class="dropdown-menu">
@@ -77,11 +87,19 @@
     <a></a>
     
   <div id="myLinks">
- 
+    
     <a href="#" ><img src="../public/legend.jpg" width="30" height="30">&nbsp&nbspLegend</a>
+    <ul class="dropdown-menu">
+      <li><a href="#">CCS2</a></li>
+      <li><a href="#"> type 2</a></li>
+    </ul>
     <a class="openDirection" href="#"><img src="../public/navigation.png" width="30" height="30">&nbsp&nbspNavigation </a>
-    <a href="#"><img src="../public/add-point.png" width="30" height="30" onclick="placeMarkerAndPanTo(latLng, map)">&nbsp&nbspAdd Station </a>
-    <a href="#"><img src="../public/feedback.png" width="30" height="30">&nbsp&nbspFeedback</a>
+    <% if(user){ %>
+    <a class="addStation" href="#"><img src="../public/add-point.png" width="30" height="30" onclick="initMap()">&nbsp&nbspAdd Station </a><% } %>
+    <% if(user){ %>
+    <a href="/feedback"><img src="../public/feedback.png" width="30" height="30">&nbsp&nbspFeedback</a>
+    <% } %>
+    <a href="/charger" ><img src="../public/list1.png" width="40" height="30">&nbspCharging station list</a>
   </div>
 
   </a>
@@ -92,6 +110,12 @@ $(".openDirection").on('click', function(){
     $(".navigation").removeClass("d-none");
     //(... rest of your JS code)
 });
+
+$(".addStation").on('click', function(){
+    $(".station").removeClass("d-none");
+    //(... rest of your JS code)
+});
+
 $(".close").on('click', function(){
   alert("ksjhfkj")
     // $(".navigation").addClass("d-none");
@@ -128,6 +152,46 @@ $(".close").on('click', function(){
 
  <center> <input type="button" value="Get Directions" onclick="initMap()"></center>
 </form>
+</div>
+
+<div class = "station d-none">
+  <!-- <button class="close">Close</button>
+   -->
+   
+  
+   <!-- <div>
+    <a class="close" href="">Close</a>
+    </div> -->
+
+   
+   
+  
+	<!-- <form>
+  <h4><label for="name" >Station Name</label></h4>
+  <input type="text" id="origin" name="stationName"><br>
+
+  <h4><label for="phone" >Phone Number</label></h4>
+  <input type="number" id="origin" name="phone"><br>
+
+  <h4><label for="address">Address</label></h4>
+  <textarea id="description" name="description" rows="4" cols="50"></textarea>
+   <input type="text" id="destination" name="address" ><br> -->
+
+  <!-- <h4><label for="description">Description</label></h4>
+  
+  <input type="text" id="description" name="description" >
+  <br>
+  <input type="checkbox" id="vehicle1" name="ccs2" value="fast">
+  <label for="vehicle1"> Fast Charging</label><br>
+  <input type="checkbox" id="vehicle2" name="type2" value="slow">
+  <label for="vehicle2"> Slow Charging</label><br>
+  <h4><label for="payment">Payment Required</label></h4>
+  
+  <input type="payment" id="description" name="payment" >
+  <br>
+
+ <center> <input type="button" class='btn btn-primary mt-2' value="Add Station Details" onclick="initMap()"></center>
+</form> -->
 </div>
 
 	          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
