--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -24,9 +24,16 @@
                 <a class="nav-link active" aria-current="page" href="/aboutus">About</a>
               </li>
               
-              <li class="nav-item">
+              <% if(user){ %>
+                <button class = dropdown> <a><%= user%></a></button>
+                <!-- <a href="/auth/logout">LogOut</a> -->
+                <a class="nav-link active" aria-current="page" href="/auth/logout">LogOut</a>
+              <% } else{ %>  
+                <!-- <a href="/auth/login">LogIn</a> -->
+                <!-- <a class="nav-link active" aria-current="page" href="/auth/login">LogIn</a> -->
                 <a class="nav-link active" aria-current="page" href="/auth/register">Register</a>
-              </li>
+                <!-- <a href=""></a> -->
+             <% } %>
               
               
               
