--- a/views/admin-users.ejs
+++ b/views/admin-users.ejs
@@ -1,7 +1,7 @@
 <%- include("./includes/header.ejs") %>
 <div class="container col-10 border border-info mt-5 pt-4 pb-4">
     <div class="alert alert-primary display-4 mx-auto text-center" role="alert">
-    FEEDBACK LIST
+    USERS LIST
       </div>
     </hr>
     
