--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Evopedia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
@@ -21,23 +21,28 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/aboutus">About</a>
+                <a class="nav-link active" aria-current="page" href="/aboutus">About Us</a>
               </li>
               
-              <% if(user){ %>
-                <button class = dropdown> <a><%= user%></a></button>
-                <!-- <a href="/auth/logout">LogOut</a> -->
-                <a class="nav-link active" aria-current="page" href="/auth/logout">LogOut</a>
-              <% } else{ %>  
-                <!-- <a href="/auth/login">LogIn</a> -->
-                <!-- <a class="nav-link active" aria-current="page" href="/auth/login">LogIn</a> -->
-                <a class="nav-link active" aria-current="page" href="/auth/register">Register</a>
-                <!-- <a href=""></a> -->
-             <% } %>
-              
-              
+               <% if(!(user)){ %>
+                
+                 <a class="nav-link active" aria-current="page" href="/auth/login">LogIn</a> 
+                  <!-- <a href="/auth/logout">LogOut</a>   -->
+                 <a class="nav-link active" aria-current="page" href="/auth/logout">LogOut</a>
+              <% } else{ %>   
+                 <!-- <a href="/auth/login">LogIn</a>  -->
+                 
+                <!-- <a class="nav-link active" aria-current="page" href="/auth/register">Register</a> -->
+                 <!-- <a href=""></a>  -->
+             
+             
               
               
           </div>
+          <form class="d-flex" role="search">
+            
+            <button class="btn " type="submit"> <a><%= user%></a></button>
+          </form>
+          <% } %>
         </div>
       </nav>
