--- a/views/includes/header1.ejs
+++ b/views/includes/header1.ejs
@@ -25,7 +25,7 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/auth/login">Login</a>
+                <a class="nav-link active" aria-current="page" href="/auth/register">Register</a>
               </li>
               
               
