--- a/views/includes/header3.ejs
+++ b/views/includes/header3.ejs
@@ -18,29 +18,14 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/aboutus">About Us</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">  My Profile</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">username</a></li>
-                    <li><a class="dropdown-item" href="#">Email</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
+                <a class="nav-link active" aria-current="page" href="/aboutus">About Us</a>
               </li>
               
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Filter</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" type="checkbox-dropdown"  href="#">CCS2<img src="../public/ccs2.png" width="50" height="50"><input type="checkbox" height="25" width="25"> </a></li>
-                    <li><a class="dropdown-item" type="checkbox-dropdown" href="#">Type 2<img src="../public/type2.png" width="50" height="50"> <input type="checkbox" height="25" width="25"></a></li>
-              </ul>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">add station <img src="../public/add.jpg" height="50" width="50"></a></li></a>
-               
+                <a class="nav-link active" aria-current="page" href="/auth/login">Login</a>
               </li>
               
               
