--- a/views/admin-list.ejs
+++ b/views/admin-list.ejs
@@ -33,7 +33,7 @@
                     <td><%=charge.pay%></td>
                     <td><%=charge.chargeType%></td>
                     <% if(admin=="admin"){ %>
-                      <td><a href="/charger/edit/<%=charge._id%>">EDIT</a> | <a href="/<%=charge._id%>">DELETE</a></th>
+                      <td><a href="/charger/delete/<%=charge._id%>">DELETE</a></th>
                       <%}
                       %>
                         
